--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,34 @@
+.pageStyle{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
 
-/* 
+.postStyle{
+	background: black;
+	height: 100px;
+	width: 30px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.bodyStyle {
+	background-color: black;
+	height: 520px;
+	width: 250px;
+	border-radius: 5%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 20px;
+}
 
-*/
+.lightStyle{
+	height: 167px;
+	width: 167px;
+	border-radius: 50%;
+}
+
+.red{background: red;}
+.yellow{background: yellow;}
+.green{background: green;}
+
+.glow{box-shadow: 0px 0px 10px 10px white;}
